# gnome-podcasts

./: .gitignore  .gitlab-ci.yml  CHANGELOG  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  TODO.md  changelog.txt  code-of-conduct.md  configure  hammond.doap  meson.build  org.gnome.Hammond.json  org.gnome.Podcasts.Devel.json  org.gnome.Podcasts.json  org.gnome.PodcastsDevel.json  podcasts.doap  release_process.md  rustfmt.toml
hammond-cli/: Cargo.toml
hammond-cli/src/: main.rs
hammond-cli/tests/: test_cli.rs
hammond-data/: Cargo.toml
hammond-data/benches/: bench.rs
hammond-data/benches/feeds/: TheLinuxActionShow.xml  coderradiomp3.xml  linuxunplugged.xml  pcpermp3.xml  techsnapmp3.xml
hammond-data/migrations/2017-09-15-001128_init_schema/: up.sql
hammond-data/migrations/2017-12-09-125835_change_episode_pk/: down.sql  up.sql
hammond-data/migrations/2017-12-22-145740_add_duration_column/: down.sql  up.sql
hammond-data/migrations/2017-12-30-201631_remove_published_date/: up.sql
hammond-data/migrations/2018-06-30-141659_remove_dead_fields/: up.sql
hammond-data/src/: database.rs  dbcheckup.rs  dbqueries.rs  errors.rs  feed.rs  feedparser.rs  index_feed.rs  lib.rs  models.rs  opml.rs  parser.rs  pipeline.rs  schema.patch  schema.rs  utils.rs
hammond-data/src/models/: episode.rs  insertables.rs  mod.rs  new_episode.rs  new_podcast.rs  new_source.rs  podcast.rs  queryables.rs  show.rs  source.rs
hammond-data/tests/feeds/: 2018-01-20-StealTheStars.xml  2018-01-20-TheTipOff.xml  2018-02-03-Intercepted.xml  TheBreakthrough.xml  notes.md
hammond-downloader/: Cargo.toml
hammond-downloader/src/: downloader.rs  errors.rs  lib.rs  manager.rs
hammond-gtk/: Cargo.toml  build.rs
hammond-gtk/gtk/: EpisodeWidget.ui  empty_view.ui  episode_widget.ui  foo.ui  headerbar.ui  pd_fb_child.ui  podcast_widget.ui  podcasts_child.ui  podcasts_grid.ui  podcasts_view.ui
hammond-gtk/resources/: meson.build  org.gnome.Hammond.appdata.xml  org.gnome.Hammond.desktop  org.gnome.Hammond.gschema.xml  org.gnome.Hammond.service.in  resources.xml
hammond-gtk/resources/gtk/: empty_show.ui  empty_view.ui  episode_widget.ui  episodes_view.ui  episodes_view_widget.ui  hamburger.ui  headerbar.ui  help-overlay.ui  inapp_notif.ui  menus.ui  playback.ui  player_toolbar.ui  podcast_widget.ui  prefs.ui  show_menu.ui  show_widget.ui  shows_child.ui  shows_view.ui  style.css
hammond-gtk/src/: app.rs  appnotif.rs  content.rs  episode_widget.rs  headerbar.rs  main.rs  manager.rs  podcast_widget.rs  prefs.rs  settings.rs  static_resource.rs  utils.rs
hammond-gtk/src/resources/: resources.gresource  resources.xml
hammond-gtk/src/stacks/: content.rs  episode.rs  home.rs  mod.rs  populated.rs  show.rs
hammond-gtk/src/views/: empty.rs  episodes.rs  mod.rs  podcasts.rs  podcasts_view.rs  shows.rs
hammond-gtk/src/widgets/: aboutdialog.rs  empty.rs  episode.rs  episode_relm.rs  episode_states.rs  home_view.rs  mod.rs  playback.rs  player.rs  podcast.rs  show.rs  show_menu.rs  shows.rs  shows_view.rs
other/: Cargo.toml
other/src/: downloader.rs  errors.rs  feedparser.rs  index_feed.rs  lib.rs  main.rs
other/tests/: test_cli.rs
other/tests/feeds/: Intercepted.xml
podcasts-data/: Cargo.toml
podcasts-data/benches/: bench.rs
podcasts-data/migrations/2017-09-15-001128_init_schema/: up.sql
podcasts-data/migrations/2017-12-09-125835_change_episode_pk/: down.sql
podcasts-data/migrations/2017-12-30-201631_remove_published_date/: down.sql
podcasts-data/migrations/2018-06-30-141659_remove_dead_fields/: down.sql
podcasts-data/migrations/2018-06-30-150717_rename_tables/: down.sql  up.sql
podcasts-data/migrations/2020-12-12-212018_add_image_cached_column/: down.sql  up.sql
podcasts-data/migrations/2020-12-14-214219_add_image_uri_hash_column/: down.sql  up.sql
podcasts-data/migrations/2021-06-24-185720_add_episode_play_position_column/: down.sql  up.sql
podcasts-data/migrations/2023-07-21-001200_add_episode_image_column/: down.sql  up.sql
podcasts-data/migrations/2023-08-16-191800_add_sync/: down.sql  up.sql
podcasts-data/migrations/2024-02-18-203855_use_rowid_as_episode_pk/: down.sql  up.sql
podcasts-data/migrations/2024-03-06-213550_add_discovery_settings_table/: down.sql  up.sql
podcasts-data/migrations/2024-07-06-140607_use_timestamp_instead_of_integer/: down.sql  up.sql
podcasts-data/src/: database.rs  dbqueries.rs  downloader.rs  errors.rs  feed.rs  feed_manager.rs  lib.rs  meson.build  opml.rs  parser.rs  pipeline.rs  schema.patch  schema.rs  test_feeds.rs  utils.rs
podcasts-data/src/discovery/: data.rs  fyyd.rs  itunes.rs  mod.rs  search.rs
podcasts-data/src/models/: discovery_settings.rs  episode.rs  mod.rs  new_episode.rs  new_show.rs  new_source.rs  show.rs  source.rs
podcasts-data/src/nextcloud_sync/: data.rs  download.rs  login.rs  mod.rs  upload.rs
podcasts-data/tests/: export_test.opml
podcasts-downloader/: Cargo.toml
podcasts-downloader/src/: downloader.rs  errors.rs  lib.rs  meson.build
podcasts-gtk/: Cargo.toml  build.rs
podcasts-gtk/po/: LINGUAS  POTFILES.in  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  he.po  hi.po  hr.po  hu.po  id.po  is.po  it.po  ka.po  kab.po  kk.po  ko.po  lv.po  meson.build  nb.po  nl.po  nn.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  (+8 more)
podcasts-gtk/resources/: meson.build  org.gnome.Podcasts.appdata.xml  org.gnome.Podcasts.appdata.xml.in.in  org.gnome.Podcasts.desktop  org.gnome.Podcasts.desktop.in  org.gnome.Podcasts.desktop.in.in  org.gnome.Podcasts.gschema.xml  org.gnome.Podcasts.gschema.xml.in  org.gnome.Podcasts.metainfo.xml.in.in  org.gnome.Podcasts.service.in  resources.gresource.LEWQQZ  resources.xml
podcasts-gtk/src/: app.rs  config.rs.in  download_covers.rs  episode_description_parser.rs  feed_manager.rs  headerbar.rs  i18n.rs  main.rs  manager.rs  meson.build  player.rs  player_mpris.rs  prefs.rs  settings.rs  static_resource.rs  static_resource.rs.in  thumbnail_generator.rs  utils.rs  window.rs
(+135 files in other folders)
