[workspace]
resolver = "2"
members = ["podcasts-data", "podcasts-gtk"]

[workspace.package]
edition = "2021"

[workspace.dependencies]
anyhow = "1"
chrono = {version = "0.4", features = ["serde", "unstable-locales"] }
log = "0.4"
once_cell = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
url = "2"
reqwest = "0.12"

[profile.release]
debug = true
lto = "thin"

[profile.dev]
opt-level = 1
lto = "thin"

[profile.dev.package."*"]
opt-level = 3
