[package]
name = "hammond-cli"
version = "0.1.0"
authors = ["Jordan Petridis <jordanpetridis@protonmail.com>"]
workspace = "../"

[dependencies]
log = "0.3"
loggerv = "0.3"
structopt = "0.1"
structopt-derive = "0.1"
error-chain = "0.11"
hammond-data = {path = "../hammond-data"}
hammond-downloader = {path = "../hammond-downloader"}

[dev-dependencies]
assert_cli = "0.5"