[package]
authors = ["Jordan Petridis <jordanpetridis@protonmail.com>"]
name = "hammond-data"
version = "0.1.0"
workspace = "../"

[dependencies]
ammonia = "1.1.0"
chrono = "0.4.1"
derive_builder = "0.5.1"
itertools = "0.7.8"
lazy_static = "1.0.0"
log = "0.4.1"
rayon = "1.0.1"
rfc822_sanitizer = "0.3.3"
rss = "1.4.0"
url = "1.7.0"
xdg = "2.1.0"
futures = "0.1.21"
hyper = "0.11.24"
tokio-core = "0.1.16"
hyper-tls = "0.1.3"
native-tls = "0.1.5"
futures-cpupool = "0.1.8"
num_cpus = "1.8.0"
failure = "0.1.1"
failure_derive = "0.1.1"

[dependencies.diesel]
features = ["sqlite", "r2d2"]
version = "1.1.1"

[dependencies.diesel_migrations]
features = ["sqlite"]
version = "1.1.0"

[dev-dependencies]
rand = "0.4.2"
tempdir = "0.3.7"
criterion = "0.2.2"
pretty_assertions = "0.5.1"

[[bench]]
name = "bench"
harness = false
