[package]
authors = ["Jordan Petridis <jordanpetridis@protonmail.com>"]
name = "hammond-data"
version = "0.1.0"
workspace = "../"

[dependencies]
ammonia = "1.1.0"
chrono = "0.4.2"
derive_builder = "0.5.1"
lazy_static = "1.0.0"
log = "0.4.1"
rayon = "1.0.1"
rayon-futures = "0.1.0"
rfc822_sanitizer = "0.3.3"
rss = "1.5.0"
url = "1.7.0"
xdg = "2.1.0"
xml-rs = "0.7.0"
futures = "0.1.21"
hyper = "0.11.25"
tokio-core = "0.1.17"
hyper-tls = "0.1.3"
native-tls = "0.1.5"
num_cpus = "1.8.0"
failure = "0.1.1"
failure_derive = "0.1.1"

# newer stuff do not compile inside flatpak
html5ever = "= 0.22.0"
string_cache = "= 0.7.1"
string_cache_codegen = "= 0.4.0"

[dependencies.diesel]
features = ["sqlite", "r2d2"]
version = "1.2.2"

[dependencies.diesel_migrations]
features = ["sqlite"]
version = "1.2.0"

[dev-dependencies]
rand = "0.4.2"
tempdir = "0.3.7"
criterion = "0.2.3"
pretty_assertions = "0.5.1"
maplit = "1.0.1"

[[bench]]
name = "bench"
harness = false
