[package]
authors = ["Jordan Petridis <jordanpetridis@protonmail.com>"]
name = "hammond-downloader"
version = "0.1.0"
workspace = "../"

[dependencies]
error-chain = "0.12.0"
hyper = "0.11.27"
log = "0.4.3"
mime_guess = "1.8.6"
reqwest = "0.8.6"
tempdir = "0.3.7"
glob = "0.2.11"
failure = "0.1.1"
failure_derive = "0.1.1"

[dependencies.hammond-data]
path = "../hammond-data"

[dev-dependencies]
pretty_assertions = "0.5.1"