[package]
authors = ["Jordan Petridis <jordanpetridis@protonmail.com>"]
build = "build.rs"
name = "hammond-gtk"
version = "0.1.0"
workspace = "../"

[dependencies]
chrono = "0.4.0"
dissolve = "0.2.2"
gdk = "0.7.0"
gdk-pixbuf = "0.3.0"
gio = "0.3.0"
glib = "0.4.1"
humansize = "1.1.0"
lazy_static = "1.0.0"
log = "0.4.1"
loggerv = "0.7.0"
open = "1.2.1"
rayon = "1.0.0"
send-cell = "0.1.2"
url = "1.6.0"
failure = "0.1.1"
failure_derive = "0.1.1"
regex = "0.2.6"
reqwest = "0.8.5"
serde_json = "1.0"

[dependencies.gtk]
features = ["v3_22"]
version = "0.3.0"

[dependencies.hammond-data]
path = "../hammond-data"

[dependencies.hammond-downloader]
path = "../hammond-downloader"
