[package]
authors = ["Jordan Petridis <jordanpetridis@protonmail.com>"]
build = "build.rs"
name = "hammond-gtk"
version = "0.1.0"
workspace = "../"

[dependencies]
chrono = "0.4.1"
crossbeam-channel = "0.1.2"
gdk = "0.8.0"
gdk-pixbuf = "0.4.0"
glib = "0.5.0"
humansize = "1.1.0"
lazy_static = "1.0.0"
log = "0.4.1"
loggerv = "0.7.1"
open = "1.2.1"
rayon = "1.0.1"
send-cell = "0.1.2"
url = "1.7.0"
failure = "0.1.1"
failure_derive = "0.1.1"
take_mut = "0.2.2"
regex = "0.2.10"
reqwest = "0.8.5"
serde_json = "1.0.13"
html2pango = { git = "https://gitlab.gnome.org/World/html2pango" }

[dependencies.gtk]
features = ["v3_22"]
version = "0.4.0"

[dependencies.gio]
features = ["v2_50"]
version = "0.4.0"

[dependencies.hammond-data]
path = "../hammond-data"

[dependencies.hammond-downloader]
path = "../hammond-downloader"

[dev-dependencies]
pretty_assertions = "0.5.1"
