[package]
authors = ["Jordan Petridis <jpetridis@gnome.org>"]
name = "podcasts-data"
version = "0.1.0"
edition = "2021"

[dependencies]
ammonia = "3.1"
anyhow = "1.0"
base64 = "0.21.0"
bytes = "1.4.0"
chrono = "0.4"
derive_builder = "0.12.0"
diesel = { version = "2.0", features = ["chrono", "sqlite", "r2d2"] }
diesel_migrations = { version = "2.0", features = ["sqlite"] }
futures-util = "0.3"
glob = "0.3"
http = "0.2"
log = "0.4"
mime_guess = "2.0"
once_cell = "1.9"
reqwest = { version = "0.11.4", features = ["json", "stream"] }
rfc822_sanitizer = "0.3"
rss = "2.0.0"
tempfile = "3"
thiserror = "1.0"
tokio = { version = "1.10", features = ["rt-multi-thread", "macros", "sync"] }
url = "2.1"
xdg = "2.2"
xml-rs = "0.8"


[dev-dependencies]
rand = "0.8.4"
maplit = "1"
