[package]
authors = ["Jordan Petridis <jpetridis@gnome.org>"]
name = "podcasts-data"
version = "0.1.0"
edition = "2021"

[dependencies]
ammonia = "3"
anyhow = { workspace = true }
base64 = "0.21"
bytes = "1"
chrono = { workspace = true }
derive_builder = "0.12"
diesel = { version = "2", features = ["chrono", "sqlite", "r2d2"] }
diesel_migrations = { version = "2", features = ["sqlite"] }
futures-util = "0.3"
glob = "0.3"
http = "0.2"
log = { workspace = true }
mime_guess = "2"
once_cell = { workspace = true }
reqwest = { version = "0.11", features = ["json", "stream"] }
rfc822_sanitizer = "0.3"
rss = "2"
serde = { version = "1", features = ["derive"] }
tempfile = "3"
thiserror = "1"
tokio = { workspace = true }
url = "2"
xdg = "2"
xml-rs = "0.8"

[dev-dependencies]
serde_json = "1"
rand = "0.8"
maplit = "1"
