[package]
authors = ["Jordan Petridis <jordanpetridis@protonmail.com>"]
name = "podcasts-downloader"
version = "0.1.0"

[dependencies]
error-chain = "0.12.0"
log = "0.4.6"
mime_guess = "1.8.6"
reqwest = "0.9.10"
tempdir = "0.3.7"
glob = "0.2.11"
failure = "0.1.5"
failure_derive = "0.1.5"

[dependencies.podcasts-data]
path = "../podcasts-data"

[dev-dependencies]
pretty_assertions = "0.6.1"
