[package]
authors = ["Jordan Petridis <jpetridis@gnome.com>"]
name = "podcasts-gtk"
version = "0.1.0"
edition = "2021"

[dependencies]
adw = { package = "libadwaita", version = "0.6", features = ["v1_5"] }
anyhow = { workspace = true }
async-channel = "2"
async-oneshot = "0.5"
chrono = { workspace = true }
fragile = "2"
futures-util = "0.3"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gst = { version = "0.22", package = "gstreamer" }
gst-play = { version = "0.22", package = "gstreamer-play" }
gtk = { package = "gtk4", version = "0.8", features = ["gnome_46"] }
html2text = "0.6"
html5ever = "0.26"
humansize = "1"
image = { version = "0.25", features = ["gif", "jpeg", "png", "webp"] }
linkify = "0.10"
locale_config = "0.3"
log = { workspace = true }
markup5ever_rcdom = "0.2"
mpris-server = "0.8"
once_cell = { workspace = true }
open = "5"
podcasts-data = { path = "../podcasts-data" }
pretty_env_logger = "0.5"
regex = "1"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1"
tempfile = "3"
tokio = { workspace = true }
url = "2"
