[package]
authors = ["Jordan Petridis <jpetridis@gnome.com>"]
name = "podcasts-gtk"
version = "0.1.0"
edition.workspace = true

[dependencies]
adw = { package = "libadwaita", version = "0.7", features = ["v1_6"] }
anyhow = { workspace = true }
async-channel = "2"
chrono = { workspace = true }
fragile = "2"
futures-util = "0.3"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gst = { version = "0.23", package = "gstreamer" }
gst-play = { version = "0.23", package = "gstreamer-play" }
gtk = { package = "gtk4", version = "0.9", features = ["gnome_47"] }
html2text = "0.12"
html5ever = "0.27"
humansize = "2"
image = { version = "0.25", features = ["gif", "jpeg", "png", "webp"] }
linkify = "0.10"
locale_config = "0.3"
log = { workspace = true }
markup5ever_rcdom = "0.3"
mpris-server = "0.8"
once_cell = { workspace = true }
open = "5"
podcasts-data = { path = "../podcasts-data" }
pretty_env_logger = "0.5"
regex = "1"
reqwest = { workspace = true, features = ["json"] }
serde_json = "1"
tempfile = "3"
tokio = { workspace = true }
url = { workspace = true }
