data_sources = files(
  'models/episode.rs',
  'models/mod.rs',
  'models/new_episode.rs',
  'models/new_show.rs',
  'models/new_source.rs',
  'models/show.rs',
  'models/source.rs',
  'database.rs',
  'downloader.rs',
  'dbqueries.rs',
  'errors.rs',
  'feed.rs',
  'lib.rs',
  'opml.rs',
  'parser.rs',
  'pipeline.rs',
  'schema.rs',
  'utils.rs',
)
